# Abacus_SendToLLM

./: # test_models.py  .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  SYSTEM_OVERVIEW.md  SendToLLM.py  extract_json.py  generate_correlation_reports.py  main.py  pyproject.toml  query_model_info.py  test_attachments.py  test_models.py  test_sendtollm.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  OPERATIONS.md
examples/: comprehensive_example.py  example_chat.py
legacy/: __init__.py  abacus_client.py  api_functions.py  auth_config.py  file_operations.py  main.py  medical_workflow.py  response_processor.py
scripts/: extract_json.py
src/llm_chat/: __init__.py  chat_llm.py  config.py
tests/: test_chat_system.py
